--- a/src/main/resources/templates/admin.users.view.html
+++ b/src/main/resources/templates/admin.users.view.html
@@ -40,7 +40,7 @@
             </td>
 
             <td>
-                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModalDelete" ng-click="selectUser(user)">Delete</button>
+                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModalDelete" ng-click="vm.deleteUser(user.id)">Delete</button>
             </td>
         </tr>
 
@@ -83,7 +83,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-2">Password</label>
                         <div class="col-sm-10">
-                            <input type="password" class="form-control" id="email" ng-model="newUser.user.password">
+                            <input type="password" class="form-control" id="password" ng-model="newUser.user.password">
                         </div>
                     </div>
 
