--- a/src/main/resources/templates/home.view.html
+++ b/src/main/resources/templates/home.view.html
@@ -3,8 +3,8 @@
 <h3>All registered users:</h3>
 <ul>
     <li ng-repeat="user in vm.allUsers">
-        {{user.username}} ({{user.firstName}} {{user.lastName}})
-        - <a ng-click="vm.deleteUser(user.id)">Delete</a>
+        {{user.user.username}} ({{user.user.firstName}} {{user.role}})
+        - <a ng-click="vm.deleteUser(user.user.id)">Delete</a>
     </li>
 </ul>
 <p>&nbsp;</p>
