Add My courses functionality

--- a/src/main/resources/templates/home.view.html
+++ b/src/main/resources/templates/home.view.html
@@ -1,11 +1,50 @@
-<h1>Hi {{vm.user.firstName}}!</h1>
-<p>You're logged in!!</p>
-<h3>All registered users:</h3>
-<ul>
-    <li ng-repeat="user in vm.allUsers">
-        {{user.user.username}} ({{user.user.firstName}} {{user.role}})
-        - <a ng-click="vm.deleteUser(user.user.id)">Delete</a>
-    </li>
-</ul>
-<p>&nbsp;</p>
-<p><a href="#!/login" class="btn btn-primary">Logout</a></p>
+<!--<h1>Hi {{vm.user.firstName}}!</h1>-->
+<!--<p>You're logged in!!</p>-->
+<!--<h3>All courses:</h3>-->
+<!--<ul>-->
+    <!--<li ng-repeat="course in vm.allCourses">-->
+        <!--{{course.name}}-->
+    <!--</li>-->
+<!--</ul>-->
+<!--<p>&nbsp;</p>-->
+<!--<p><a href="#!/login" class="btn btn-primary">Logout</a></p>-->
+
+<div class="container">
+    <hr>
+    <h2>My Courses</h2>
+    <span class="clearfix"></span>
+    </hr>
+
+    <div class="alert alert-info" ng-if="message">
+        <a href="#" class="close" ng-click="clearMessage()">&times;</a>
+        {{message}}
+    </div>
+
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Index</th>
+            <th>Name</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th>Tags</th>
+            <th>Description</th>
+            <th>Difficulty</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        <tr ng-repeat="course in vm.myCourses | filter:query">
+            <td>{{$index+1}}</td>
+            <td>{{course.name}}</td>
+            <td>{{course.start}}</td>
+            <td>{{course.end}}</td>
+            <td>{{course.tags}}</td>
+            <td>{{course.description}}</td>
+            <td>{{course.difficulty}}</td>
+        </tr>
+
+        </tbody>
+    </table>
+
+</div>
